<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="calendar_sunday">Sun</string>
</resources>